--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@iconify/react": "^5.0.1",
     "@react-pdf/renderer": "^3.4.4",
     "flowbite-react": "^0.9.0",
     "react": "^18.2.0",
