--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@iconify/react": "^5.0.1",
     "@react-pdf/renderer": "^3.4.4",
     "flowbite-react": "^0.9.0",
+    "fs": "^0.0.1-security",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
-    "swiper": "^11.1.4"
+    "swiper": "^11.1.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
