--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@iconify/react": "^5.0.1",
     "@react-pdf/renderer": "^3.4.4",
+    "file-saver": "^2.0.5",
     "flowbite-react": "^0.9.0",
     "fs": "^0.0.1-security",
     "jspdf": "^2.5.1",
